--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-12  Hans-Peter Nilsson  <hp@axis.com>
+
+	* gcc.c-torture/execute/20020611-1.c: New test.
+
 2002-06-11  Bob Wilson  <bob.wilson@acm.org>
 
 	* g++.old-deja/g++.pt/static11.C: Add xtensa-*-elf* to the
